设备与位置模块迁移
